# rag-notebook

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 1fc7db607bf6_init.py
app/: __init__.py  config.py  main.py
app/api/: auth.py  chat.py  documents.py  metrics.py  upload.py
app/db/: __init__.py  models.py  session.py  vector_store.py
app/eval/: __init__.py  __main__.py  mock_openai.py  runner.py  schemas.py
app/models/: __init__.py  schemas.py
app/observability/: __init__.py  logging.py  metrics.py  middleware.py  openai.py
app/rag/: __init__.py  chunking.py  embedding.py  prompting.py  query_rewrite.py  rerank.py  retrieval.py
app/services/: auth_dependencies.py  auth_service.py  document_service.py  pdf_service.py
app/templates/: base.html  index.html  login.html  metrics.html  register.html
docker/: migrate.sh  start.sh  wait_for_db.sh
docs/learning_notes/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
eval/: golden.jsonl
tests/: __init__.py  conftest.py  test_api.py  test_chunking.py  test_document_service.py  test_eval_smoke.py  test_metrics.py  test_retrieval.py  test_week3_rewrite_rerank.py
